@@ -14,11 +14,33 @@ public class Player {
   private final String name;
   private final List<AdventureCard> hand;
   private int shields;
+  private int numCardsToTrim;
+  private List<AdventureCard> trimmedCards;
 
     public Player(String name) {
         this.name = name;
         this.hand = new ArrayList<>();
         this.shields = 0;
+        this.numCardsToTrim = 0;
+        this.trimmedCards = new ArrayList<>();
+    }
+
+    public void overWriteHand(List<AdventureCard> cards, Display display) {
+      hand.clear();
+      addToHand(cards, display, true);
+    }
+
+    public boolean needToTrimHand() {
+      return hand.size() > MAX_HAND_SIZE;
+    }
+
+    public int numCardsToTrim() {
+      return needToTrimHand() ? hand.size() - MAX_HAND_SIZE : 0;
+    }
+
+    public void addToHand(List<AdventureCard> cards) {
+      hand.addAll(cards);
+      sortHand();
     }
 
     public List<AdventureCard> addToHand(List<AdventureCard> cards, Display display) {
@@ -32,7 +54,7 @@ public class Player {
       int numCardsToTrim = computeNumCardsToTrim(cards.size());
       if (numCardsToTrim > 0) {
         while (cards.size() > Player.MAX_HAND_SIZE) {
-          trimmedCards.add(cards.removeFirst());
+          trimmedCards.add(cards.remove(0));
         }
         trimmedCards.addAll(trimHand(numCardsToTrim, display));
       }
@@ -41,11 +63,6 @@ public class Player {
 
       if (!setup) display.printHand(hand);
       return trimmedCards;
-    }
-
-    public void overWriteHand(List<AdventureCard> cards, Display display) {
-      hand.clear();
-      addToHand(cards, display, true);
     }
 
     public int computeNumCardsToTrim(int numCardsToAdd) {
@@ -93,6 +110,18 @@ public class Player {
 
     public void setShields(int shields) {
         this.shields = shields;
+    }
+
+    public void setNumCardsToTrim(int numCardsToTrim) {
+      this.numCardsToTrim = numCardsToTrim;
+    }
+
+    public int getNumCardsToTrim() {
+      return numCardsToTrim;
+    }
+
+    public List<AdventureCard> getTrimmedCards() {
+      return trimmedCards;
     }
 
     @Override
